# joirender

./: Dockerfile  app.py  chat.js  chatbot.ipynb  diagnose_run_sh.sh  dockerfile  entrypoint.sh  node.js  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run.sh  server.py
static/: styles.css
templates/: about.html  chat.html  contact.html  index.html  tutorial.html
