[tool.poetry]
name = "llama3-flask-app"
version = "0.1.0"
description = "Flask app with Llama3 via Ollama"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.0"
gunicorn = "^20.1.0"
ollama = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"