[tool.poetry]
name = "llama3-flask-app"
version = "0.1.0"
description = "A Flask app with Ollama integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false  # Disable packaging since --no-root is used

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
gunicorn = "^20.1.0"
ollama = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"